k8s/apps/loki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: loki
  labels:
    app: loki
  annotations:
    tailscale.com/proxy-class: "high-bandwidth"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: loki
      port:
        number: 3100
  tls:
    - hosts:
        - loki.tail57bf10.ts.net
